# obsidianpy

./: .gitignore  Readme.md  pyproject.toml
docs/: overview.md
obsidianpy/core/: contents_abc.py  hash_func.py  interfaces.py  link.py
obsidianpy/notes/: contents.py  note.py
tests/: test_note.py
tests/test_data/notes/: long_note.md  short_note.md
